<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_library"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="Library" />
    <item
        android:id="@+id/nav_playlists"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="Playlists" />
    <item
        android:id="@+id/nav_now"
        android:icon="@android:drawable/ic_media_play"
        android:title="Now Playing" />
    <item
        android:id="@+id/nav_queue"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="Queue" />
    <item
        android:id="@+id/nav_radio"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="Radio" />
</menu>
