...
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRadioMain"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:text="Radio ROKS (основний)"
        android:textAllCaps="false"
...
